--- a/mortgage-front/src/app/Components/customer-list/customer-list.component.scss
+++ b/mortgage-front/src/app/Components/customer-list/customer-list.component.scss
@@ -27,9 +27,9 @@
 th {
   font-weight: bold !important;
 }
-tr:hover{
-  background-color: rgba(178, 189, 202, 0.058)!important;
-}
+// tr:hover{
+//   background-color: rgba(178, 189, 202, 0.058)!important;
+// }
 #content {
   background-color: rgba(255, 255, 255, 0.602);
   border-radius: 40px;
