--- a/mortgage-front/src/styles.scss
+++ b/mortgage-front/src/styles.scss
@@ -13,18 +13,21 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 1px;
+    width: 15px;
 }
+tr:hover{
+    background-color: rgba(178, 189, 202, 0.058)!important;
+  } 
 
 ::-webkit-scrollbar-track {
     background: #E7E5E8;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #7175D8;
+    background: #6a859f;
     border: 2px solid #E7E5E8;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #4F52AF;
+    background: #576d82;
 }
