--- a/mortgage-front/src/app/Components/user-list/user-list.component.css
+++ b/mortgage-front/src/app/Components/user-list/user-list.component.css
@@ -59,9 +59,16 @@
   font-weight: bold !important;
 
  }
- tr:hover{
+ /* tr:hover{
   background-color: rgba(178, 189, 202, 0.058)!important;
-}
+} */
  .rtl-table-wrapper {
    width: 100%;
  }
+ #content {
+  background-color: rgba(255, 255, 255, 0.602);
+  padding: 25px;
+  border-radius: 40px;
+  min-width: max-content;
+  min-height: 60vh;
+}
