--- a/mortgage-front/src/app/Components/admin-dashboard/admin-dashboard.component.html
+++ b/mortgage-front/src/app/Components/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,4 @@
-<p>admin-dashboard works!</p>
+    <button  mat-raised-button  color="primary" (click)="exportToExcel()">
+        <mat-icon>save</mat-icon>יצוא לאקסל
+    </button>
+    
