--- a/mortgage-front/src/app/Components/file-upload/file-upload.component.html
+++ b/mortgage-front/src/app/Components/file-upload/file-upload.component.html
@@ -1,31 +1,39 @@
 <div class="container">
-  <input type="file" id="fileInput" (change)="onFileSelected($event)" hidden />
+  <input type="file" id="fileInput" (change)="onFileSelected($event)" multiple hidden />
   <button mat-raised-button color="primary" (click)="triggerFileInput()">
     <mat-icon>upload</mat-icon>
-    Select File
+    Select Files
   </button>
 
-  <button mat-raised-button color="accent" [disabled]="!selectedFile" (click)="onUpload()">
+  <button mat-raised-button color="accent" [disabled]="!selectedFiles || selectedFiles.length === 0"
+    (click)="onUpload()">
     Upload
   </button>
-  @if(uploadedFileName){
-  <h3>{{uploadedFileName}}</h3>}
-  <!-- @if(showMsg){
-  <h3 id="msg">{{message}}</h3>
-  } -->
-  @if(uploadProgress>0){
-  <div class="progress-bar">
-    <mat-progress-bar mode="determinate" [value]="uploadProgress"></mat-progress-bar>
-    Upload Progress: {{ uploadProgress }}%
+
+  <!-- Display selected file names -->
+  @if ( selectedFiles && selectedFiles.length > 0) {
+  <div >
+    <h3>Selected Files:</h3>
+    <ul>
+      @for(file of selectedFiles;track file.name){
+      <li >{{ file.name }}</li>}
+    </ul>
   </div>
   }
-
-  <hr />
-
-
-
-  <!-- 
-  <div *ngIf="uploadedFileName">
-    <button (click)="onDownload(uploadedFileName)">Download Uploaded File</button>
+  @if ( uploadedFiles && uploadedFiles.length > 0) {
+  <!-- Display uploaded file names -->
+  <div >
+    <h3>Uploaded Files:</h3>
+    <ul>
+      @for(file of uploadedFiles;track file.name){
+      <li >{{ file.name }}</li>}
+    </ul>
   </div>
-</div> -->
+  }
+  <!-- Display upload progress -->
+  @if(uploadProgress > 0){
+    <div class="progress-bar">
+      <mat-progress-bar mode="determinate" [value]="uploadProgress"></mat-progress-bar>
+      Upload Progress: {{ uploadProgress }}%
+    </div>}
+</div>
