--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.scss
@@ -44,16 +44,16 @@ a{
 
 .container{
   height: max-content;
+  background-color: rgba(0, 0, 0, 0.05);
   background-image: url("/assets/background.jpg");
   background-size: cover;  
+  
 }
 .main-content{
-  // height: 100vh;
+  height: 100vh;
   // background-image: url("/assets/back.jpg");
   // background-size: cover;
   // background-attachment:scroll;
-
-
 }
 // my
 // .main-content {
