fix the problem with navigation

--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-toolbar></app-toolbar>
-<navigation-menu [componentsList]="componentArray"></navigation-menu>
+<!-- <navigation-menu [componentsList]="componentArray"></navigation-menu> -->
 
-<router-outlet ></router-outlet>
+<app-login></app-login>
 
+<!-- <router-outlet></router-outlet> -->
 
 <footer > </footer>
