--- a/mortgage-front/src/app/Components/login/login.component.html
+++ b/mortgage-front/src/app/Components/login/login.component.html
@@ -1,2 +1,42 @@
+<mat-card ngSkipHydration>
+    <mat-card-title>התחברות---</mat-card-title>
+    <mat-card-content>
+        <form [formGroup]="loginForm" (ngSubmit)="submit()">
+            <p>
+                <mat-form-field>
+                    <input type="email" matInput placeholder="Email" formControlName="email">
+                    @if(email?.invalid && (email?.dirty || email?.touched)){
+                    <mat-error>
+                        @if(email?.errors?.['required']){
+                        <span >שדה זה חובה</span>
+                        }
+                        @if(email?.errors?.['email']){
+                        <span>פורמט מייל לא תקין</span>
+                        }
+                    </mat-error>}
+                </mat-form-field>
 
-<p style="width: 100%;height: 50vh;">login works!</p>
+            </p>
+            <p>
+                <mat-form-field>
+                    <input type="password" matInput placeholder="Password" formControlName="password">
+                    @if(password?.invalid &&(password?.dirty || password?.touched) ){
+                    <mat-error>
+                        @if(password?.errors?.['required'])
+                        { <span>הכנס את הסיסמא שלך השמורה במערכת</span>}
+                        @if(password?.errors?.['minlength']){
+                        <span>הסיסמא צריכה להכיל לפחות 6 תווים</span>}
+                        @if(password?.errors?.['pattern']){
+                        <span>ללא רווחים</span>
+                        }
+                    </mat-error>
+                }
+                </mat-form-field>
+            </p>
+            <div class="button">
+                <button type="submit" mat-button>Login</button>
+            </div>
+        </form>
+    </mat-card-content>
+</mat-card>
+<router-outlet> </router-outlet>
