new design to customer detailes compo

--- a/mortgage-front/src/app/Components/customer-detail-modal/customer-detail-modal.component.scss
+++ b/mortgage-front/src/app/Components/customer-detail-modal/customer-detail-modal.component.scss
@@ -5,8 +5,9 @@
   flex-direction: column;
   width: 70vh;
   margin: auto;
-  align-items: flex-start;
-  
+  align-items: baseline;
+  border: 2px solid lavenderblush;
+  border-radius: 15px;
 
   /* Center align the form */
   h2 {
@@ -102,4 +103,3 @@
 
 
 }
-
