--- a/mortgage-front/src/app/Components/login/login.component.html
+++ b/mortgage-front/src/app/Components/login/login.component.html
@@ -15,7 +15,6 @@
                         }
                     </mat-error>}
                 </mat-form-field>
-
             </p>
             <p>
                 <mat-form-field>
@@ -39,4 +38,4 @@
         </form>
     </mat-card-content>
 </mat-card>
-<router-outlet> </router-outlet>
+<!-- <router-outlet> </router-outlet> -->
