--- a/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
+++ b/mortgage-front/src/app/Components/navigation-menu/navigation-menu.component.html
@@ -14,7 +14,7 @@
     </mat-sidenav>
     <mat-sidenav-content class="main-content" dir="rtl" >
       <div class="content"  style="background: none;">
-        <!-- <router-outlet  style="background: none;"></router-outlet> -->
+        <router-outlet  style="background: none;"></router-outlet>
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
