--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,8 +1,18 @@
 <app-toolbar></app-toolbar>
-<!-- <navigation-menu [componentsList]="componentArray"></navigation-menu> -->
-
-<app-login></app-login>
-
-<!-- <router-outlet></router-outlet> -->
-
-<footer > </footer>
+@if(loginService.isAdmin==undefined){
+    <ng-container>
+        <app-login></app-login>
+    </ng-container>
+    }
+<router-outlet></router-outlet>
+@if(loginService.isAdmin=='admin'){
+<ng-container>
+    <app-admin-dashboard></app-admin-dashboard>
+</ng-container>
+}
+@if(loginService.isAdmin=='customer'){
+    <ng-container>
+        <app-customer-portal></app-customer-portal>
+    </ng-container>
+    }
+<footer> </footer>
