--- a/mortgage-front/src/app/Components/admin-dashboard/admin-dashboard.component.html
+++ b/mortgage-front/src/app/Components/admin-dashboard/admin-dashboard.component.html
@@ -1,2 +1,3 @@
-<h1>hiii</h1>
+
 <navigation-menu [componentsList]="componentArrayOfAdmin"></navigation-menu> 
+<!-- <router-outlet></router-outlet> -->
