--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-toolbar></app-toolbar>
 <!-- <navigation-menu [componentsList]="componentArray"></navigation-menu> -->
 
-<app-login></app-login>
+<!-- <app-login></app-login> -->
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 
 <footer > </footer>
