--- a/mortgage-front/src/app/Components/document-type-details/document-type-details.component.css
+++ b/mortgage-front/src/app/Components/document-type-details/document-type-details.component.css
@@ -1,11 +1,9 @@
 .document-type-edit-card {
-  max-width: 800px;
   margin: auto;
   padding: 20px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-  height: 40vh;
   /* Black box shadow */
-
+  height: 100%;
 }
 
 
