commit-login-componnent

--- a/mortgage-front/src/app/Components/admin-dashboard/admin-dashboard.component.html
+++ b/mortgage-front/src/app/Components/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,5 @@
+<!-- <app-toolbar></app-toolbar> -->
 
 <navigation-menu [componentsList]="componentArrayOfAdmin"></navigation-menu> 
 <!-- <router-outlet></router-outlet> -->
+ <!-- <app-footer> </app-footer> -->
