--- a/mortgage-front/src/app/Components/login/login.component.html
+++ b/mortgage-front/src/app/Components/login/login.component.html
@@ -1,41 +1,40 @@
-<mat-card ngSkipHydration>
-    <mat-card-title>התחברות---</mat-card-title>
-    <mat-card-content>
-        <form [formGroup]="loginForm" (ngSubmit)="submit()">
-            <p>
-                <mat-form-field>
-                    <input type="email" matInput placeholder="Email" formControlName="email">
-                    @if(email?.invalid && (email?.dirty || email?.touched)){
-                    <mat-error>
-                        @if(email?.errors?.['required']){
-                        <span >שדה זה חובה</span>
-                        }
-                        @if(email?.errors?.['email']){
-                        <span>פורמט מייל לא תקין</span>
-                        }
-                    </mat-error>}
-                </mat-form-field>
-            </p>
-            <p>
-                <mat-form-field>
-                    <input type="password" matInput placeholder="Password" formControlName="password">
-                    @if(password?.invalid &&(password?.dirty || password?.touched) ){
-                    <mat-error>
-                        @if(password?.errors?.['required'])
-                        { <span>הכנס את הסיסמא שלך השמורה במערכת</span>}
-                        @if(password?.errors?.['minlength']){
-                        <span>הסיסמא צריכה להכיל לפחות 6 תווים</span>}
-                        @if(password?.errors?.['pattern']){
-                        <span>ללא רווחים</span>
-                        }
-                    </mat-error>
-                }
-                </mat-form-field>
-            </p>
-            <div class="button">
-                <button type="submit" mat-button>Login</button>
+<div class="login-container">
+    <div class="login-card">
+      <h3 class="card-title" style="font-size: 40px;"><i class="material-icons" style="font-size: 30px;float: none;">account_circle</i>הירשם לכניסה</h3>
+      <form [formGroup]="loginForm" (ngSubmit)="submit()">
+        <div class="form-group">
+          <label for="email"><i class="material-icons">email</i> כתובת אמייל</label>
+          <input type="email" class="form-input" id="email" formControlName="email" placeholder="you@example.com">
+          @if(email?.invalid && (email?.dirty || email?.touched)){
+            <div  class="text-danger">
+                @if(email?.errors?.['required']){
+              <div>Email is required.</div>}
+              @if(email?.errors?.['email']){<div>Email is invalid.</div>}
             </div>
-        </form>
-    </mat-card-content>
-</mat-card>
-<!-- <router-outlet> </router-outlet> -->
+        }
+    
+        </div>
+        <div class="form-group">
+          <label for="password"><i class="material-icons">lock</i> סיסמה</label>
+          <input type="password" class="form-input" id="password" formControlName="password" placeholder="Password">
+          @if(password?.invalid && (password?.dirty || password?.touched)){
+            <div  class="text-danger">
+                @if(password?.errors?.['required']){
+              <div >Password is required.</div>
+                }
+                @if (password?.errors?.['minlength']) {
+              <div >Password must be at least 6 characters long.</div>}
+              @if(password?.errors?.['pattern']){
+              <div >Password cannot contain spaces.</div>}
+            </div>
+        }
+        </div>
+        <button type="submit" class="submit-btn" [disabled]="loginForm.invalid">Login</button>
+      </form>
+      <div class="forgot-password">
+        <a  (click)="forgotPassword()" class="text-muted">Forgot Password?</a>
+      </div>
+    </div>
+  </div>
+
+  <router-outlet> </router-outlet>
