--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,10 +1,19 @@
 <app-toolbar></app-toolbar>
-@if(loginService.isAdmin==undefined){
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet>
+
+<!-- 
+@if(loginService.isAdmin='lead')
+{
+    <ng-container>
+        <app-magic-link></app-magic-link>
+    </ng-container>
+} -->
+<!-- @if(loginService.isAdmin==undefined){
     <ng-container>
         <app-login></app-login>
     </ng-container>
     }
-<router-outlet></router-outlet>
 @if(loginService.isAdmin=='admin'){
 <ng-container>
     <app-admin-dashboard></app-admin-dashboard>
@@ -14,5 +23,7 @@
     <ng-container>
         <app-customer-portal></app-customer-portal>
     </ng-container>
-    }
+    
+} -->
+
 <footer> </footer>
