--- a/mortgage-front/src/app/Components/login/login.component.scss
+++ b/mortgage-front/src/app/Components/login/login.component.scss
@@ -116,7 +116,12 @@
 #password{
   width: 84%;
 }
-
+a{
+  text-decoration: underline;
+}
+a:hover{
+  cursor: pointer;
+}
 :host {
   background-color: transparent;
 }
