--- a/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
+++ b/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
@@ -7,7 +7,7 @@
     </mat-form-field>
   </div>
 
-  <div class="example-table-container" dir="rtl">
+  <div>
     <table
       mat-table
       [dataSource]="dataSource"
@@ -24,7 +24,7 @@
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef><b> סוג עסקה </b></th>
         <td mat-cell *matCellDef="let element">
-          {{ element.document_type_id }}
+          {{ changeTransacTypeToString(element.document_type_id) }}
         </td>
       </ng-container>
 
@@ -51,19 +51,38 @@
             <input
               type="file"
               #fileInput
-              (change)="onFileSelected($event)"
+              (change)="onFileSelected($event, element)"
               style="display: none"
             />
           </button>
-          } @else { התעדכן בתאריך: {{ element.created_at }}
+          } @if (element.status==1) {
+          {{ selectedDocuments[element.id].name }}
+          <button mat-button (click)="xfunc(element)">ביטול</button>
+          } @if (element.status==2) {
+          {{ selectedDocuments[element.id].name }}
           }
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef><b> תאריך עדכון </b></th>
+        <td mat-cell *matCellDef="let element">
+          {{ formatDate(element.created_at) }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="approval">
         <th mat-header-cell *matHeaderCellDef><b> אישור פעולה </b></th>
         <td mat-cell *matCellDef="let element">
-          <mat-checkbox class="example-margin"></mat-checkbox>
+          <!-- @if (element.status === 1) { -->
+          <section class="example-section">
+            <mat-checkbox
+              class="example-margin"
+              [disabled]="element.status !== 1"
+              [matTooltip]="element.status === 0 ? 'עדיין לא נבחר מסמך' : ''"
+            ></mat-checkbox>
+          </section>
+          <!-- } -->
         </td>
       </ng-container>
 
@@ -71,12 +90,19 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
-  } 
-  
-  @else 
-  {
+
+  <div class="send-all">
+    <div class="example-button-row">
+      <button mat-flat-button>
+        <span class="button-text">שלח מסמכים שנבחרו</span>
+        <span class="icon-container"
+          ><i class="fa-regular fa-paper-plane"></i
+        ></span>
+      </button>
+    </div>
+  </div>
+
+  } @else {
   <div>כרגע אין מסמכים</div>
   }
-  
 </main>
-<!-- נסיון להוספת כפתור חץ -->
