--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-toolbar></app-toolbar>
-<navigation-menu [componentsList]="componentArray"></navigation-menu>
-
-<router-outlet ></router-outlet>
-
-
-<footer > </footer>
+<div *ngIf="showGeneral">
+    <app-toolbar></app-toolbar>
+    <navigation-menu [componentsList]="componentArray"></navigation-menu>
+    <router-outlet></router-outlet>
+    <footer> </footer>
+</div>
+<router-outlet *ngIf="!showGeneral"></router-outlet>
