--- a/mortgage-front/src/app/Components/customer-list/customer-list.component.html
+++ b/mortgage-front/src/app/Components/customer-list/customer-list.component.html
@@ -168,6 +168,7 @@
             <button mat-icon-button color="warn" (click)="deleteCustomer(customer)">
               <mat-icon>delete</mat-icon>
             </button>
+            <app-download-accompanying-form [customerId]="customer.id"></app-download-accompanying-form>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -209,6 +210,7 @@
             <button mat-icon-button color="warn" (click)="deleteCustomer(customer)">
               <mat-icon>delete</mat-icon>
             </button>
+            <app-download-accompanying-form [customerId]="customer.id"></app-download-accompanying-form>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -251,6 +253,8 @@
             <button mat-icon-button color="warn" (click)="deleteCustomer(customer)">
               <mat-icon>delete</mat-icon>
             </button>
+
+            <app-download-accompanying-form [customerId]="customer.id"></app-download-accompanying-form>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
