--- a/mortgage-front/src/app/Components/customer-list/customer-list.component.scss
+++ b/mortgage-front/src/app/Components/customer-list/customer-list.component.scss
@@ -47,8 +47,8 @@ th {
 // margin-right: 10vw;
 }
 #mainAll{
-  border-radius: 25px;
-  padding: 25px;
+  border-radius: 10px;
+  border: 5px solid rgba(128, 128, 128, 0.13);  padding: 25px;
   background-color: rgba(255, 255, 255, 0.394);
   margin: 0 auto;
 
