--- a/mortgage-front/src/app/Components/document-type-list/document-type-list.component.css
+++ b/mortgage-front/src/app/Components/document-type-list/document-type-list.component.css
@@ -1,14 +1,14 @@
 #content {
     background-color: rgba(255, 255, 255, 0.602);
     padding: 25px;
-    border-radius: 40px;
-    /* border: 3px solid rgb(178, 189, 202); */
+    border-radius: 10px;
+    border: 5px solid rgba(128, 128, 128, 0.13);    /* border: 3px solid rgb(178, 189, 202); */
     min-width: max-content;
     min-height: 60vh;
     max-width: 60vw;
     margin: 0 auto;
-    background: none!important;
-    background-color: transparent!important;
+    /* background: none!important;
+    background-color: transparent!important; */
   }
   
 :host {
