--- a/mortgage-front/src/app/Components/lead-list/lead-list.component.scss
+++ b/mortgage-front/src/app/Components/lead-list/lead-list.component.scss
@@ -10,8 +10,8 @@ th{
     margin: 0 auto;
     background-color: rgba(255, 255, 255, 0.602);
     padding: 25px;
-    border-radius: 40px;
-    // border: 3px solid rgb(178, 189, 202);
+    border-radius: 10px;
+    border: 5px solid rgba(128, 128, 128, 0.13);    // border: 3px solid rgb(178, 189, 202);
     min-width: max-content;
     min-height: 60vh;
     // max-width: 100vh;
