--- a/mortgage-front/src/app/Components/user-list/user-list.component.css
+++ b/mortgage-front/src/app/Components/user-list/user-list.component.css
@@ -70,8 +70,8 @@ th {
 #content {
   background-color: rgba(255, 255, 255, 0.602);
   padding: 25px;
-  border-radius: 40px;
-  min-width: max-content;
+  border-radius: 10px;
+  border: 5px solid rgba(128, 128, 128, 0.13);  min-width: max-content;
   min-height: 60vh;
   max-width: 70vw;
   margin:  0 auto;
