--- a/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
+++ b/mortgage-front/src/app/Components/documents-list-customer/documents-list-customer.component.html
@@ -1,3 +1,4 @@
+
 <main>
   @if(dataSource.data.length>0){
   <div dir="rtl">
@@ -8,7 +9,7 @@
   </div>
 
   <div>
-    <table
+    <table 
       mat-table
       [dataSource]="dataSource"
       class="mat-elevation-z8"
@@ -37,7 +38,7 @@
 
       <ng-container matColumnDef="icon">
         <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell  *matCellDef="let element; let i = index">
           @if(element.status==0){
           <button
             mat-icon-button
@@ -56,10 +57,13 @@
             />
           </button>
           } @if (element.status==1) {
-          {{ selectedDocuments[element.id].name }}
-          <button mat-button (click)="xfunc(element)">ביטול</button>
+            <span (click)="viewDocument(view(element.id))" style="cursor:pointer;" class="span">
+              {{ view(element.id)?.name }}
+            </span>
+          <!-- {{ view(element.id).name }} -->
+          <button mat-button (click)="xfunc(element,i)">ביטול</button>
           } @if (element.status==2) {
-          {{ selectedDocuments[element.id].name }}
+          {{ view(element.id)?.name }}
           }
         </td>
       </ng-container>
@@ -67,22 +71,31 @@
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef><b> תאריך עדכון </b></th>
         <td mat-cell *matCellDef="let element">
+          @if(element.status==2){
           {{ formatDate(element.created_at) }}
+        }
         </td>
       </ng-container>
-
       <ng-container matColumnDef="approval">
         <th mat-header-cell *matHeaderCellDef><b> אישור פעולה </b></th>
         <td mat-cell *matCellDef="let element">
-          <!-- @if (element.status === 1) { -->
+          @if (element.status === 1) {
           <section class="example-section">
-            <mat-checkbox
+            <mat-checkbox  #myCheckbox id="mat-checkbox"
+            (change)="onCheckboxChange($event.checked, element)"
               class="example-margin"
               [disabled]="element.status !== 1"
               [matTooltip]="element.status === 0 ? 'עדיין לא נבחר מסמך' : ''"
             ></mat-checkbox>
           </section>
-          <!-- } -->
+          }
+          @else {
+              <mat-checkbox #myCheckbox  id="mat-checkbox"
+              (change)="onCheckboxChange($event.checked, element)"
+                class="example-margin"
+                [disabled]="true"
+              ></mat-checkbox>
+          }
         </td>
       </ng-container>
 
@@ -90,19 +103,16 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
-
   <div class="send-all">
     <div class="example-button-row">
-      <button mat-flat-button>
-        <span class="button-text">שלח מסמכים שנבחרו</span>
-        <span class="icon-container"
-          ><i class="fa-regular fa-paper-plane"></i>
-        </span>
+      <button mat-flat-button (click)="saveFiles()">
+       <span class="button-text" >שלח מסמכים שנבחרו</span>
+        <span class="icon-container"><i class="fa-solid fa-paper-plane"></i></span>
       </button>
     </div>
   </div>
 
   } @else {
-  <div>כרגע אין מסמכים</div>
+  <div class="centered-message">לא נמצאו עבורך מסמכים</div>
   }
 </main>
