--- a/mortgage-front/src/app/Components/footer/footer.component.css
+++ b/mortgage-front/src/app/Components/footer/footer.component.css
@@ -10,6 +10,11 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    /* text-shadow: 2px 2px 50px white; */
+    /* flex-wrap: wrap;*/
+    font-family: Segoe UI Black;
+    color:#ffffffe9;
+
     /* flex-wrap: wrap;*/
     /* grid-area: "footer"; */
     /* z-index: 5; */
@@ -22,8 +27,10 @@
     border-radius: 3px;
   }
   .footer-text {
-    color:#f41db0e9;
     font-size: 20px;
     margin-top: 20px;
     text-align: center;
   }
+p{
+  margin: 0px!important;
+}
