--- a/mortgage-front/src/app/Components/customer-edit/customer-edit.component.html
+++ b/mortgage-front/src/app/Components/customer-edit/customer-edit.component.html
@@ -4,51 +4,56 @@
         <form (submit)="submitForm()">
             <mat-form-field appearance="fill" class="mat-form-field">
                 <mat-label> שם פרטי</mat-label>
-                <input matInput [(ngModel)]="formData['first_Name']" name="firstName">
-                <mat-error>שדה זה הינו חובה</mat-error>
+                <input matInput [(ngModel)]="formData['first_Name']" name="firstName" readonly>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="mat-form-field">
                 <mat-label>שם משפחה</mat-label>
-                <input matInput [(ngModel)]="formData['last_Name']" name="lastName">
+                <input matInput [(ngModel)]="formData['last_Name']" name="lastName" readonly>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="mat-form-field">
                 <mat-label>טלפון</mat-label>
-                <input matInput [(ngModel)]="formData['phone']" name="phone">
+                <input matInput [(ngModel)]="formData['phone']" name="phone" required >
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="mat-form-field">
                 <mat-label>מייל</mat-label>
-                <input matInput [(ngModel)]="formData['email']" name="email">
+                <input matInput [(ngModel)]="formData['email']" name="email" required>
             </mat-form-field>
             <br>
             <mat-form-field appearance="fill" class="mat-form-field">
                 <mat-label>כתובת </mat-label>
-                <input matInput [(ngModel)]="formData['adress']" name="adress">
+                <input matInput [(ngModel)]="formData['address']" name="address">
             </mat-form-field>
 
 
 
             <mat-form-field appearance="fill" class="mat-form-field">
                 <mat-label>תעודת זהות</mat-label>
-                <input matInput [(ngModel)]="formData['t_z']" name="id">
+                <input matInput [(ngModel)]="formData['t_z']" name="id" readonly>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="mat-form-field">
                 <mat-label>תאריך לידה</mat-label>
-                <input matInput type="date" [(ngModel)]="formData['birthDate']" name="birthDate">
+                <input matInput type="date" [(ngModel)]="formData['birthDate']" name="birthDate" readonly>
             </mat-form-field>
             <!-- "" -->
             <mat-form-field appearance="fill" class="mat-form-field">
                 <mat-label>התקשרות</mat-label>
-                <mat-select placeholder="Select your option" [(ngModel)]="formData['connection']" name="connection">
+                <mat-select placeholder="Select your option" [(ngModel)]="formData['connection']" name="connection" required>
                     <mat-option *ngFor="let option of options" [value]="option.value">
                         <mat-icon>{{ option.icon }}</mat-icon>
                         {{ option.viewValue }}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
+            <div class="button-group">
+                <button mat-raised-button color="primary" type="submit" >שמור</button>
+                <!-- [disabled]="customerForm.invalid" -->
+                <button mat-raised-button color="warn" type="button">ביטול</button>
+        
+              </div>
         </form>
     </mat-card-content>
 </mat-card>
