lead component finish

--- a/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.html
+++ b/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.html
@@ -26,7 +26,7 @@
       <br>
       <mat-form-field appearance="fill" class="mat-form-field">
         <mat-label>כתובת </mat-label>
-        <input matInput [(ngModel)]="formData['adress']" name="adress">
+        <input matInput [(ngModel)]="formData['address']" name="adress">
       </mat-form-field>
 
 
